# jogo_cobrinha

./: CMakeLists.txt  comandos.txt  conanfile.txt  jogo_cobrinha.c  main.c
